2007-02-07  Markus Schiltknecht  <markus@bluegap.ch>

	* tests/test_a_merge_8/__driver__.lua: added xfail() and a bug id,
	so that current tests run through fine.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* charset.cc (system_to_utf8): Move below system_charset_is_utf8
	etc; add the same short-circuit logic that utf8_to_system
	has.  (In addition to being a speed win, this avoids problems with
	buggy iconv implementations that don't implement the encoding that
	their own locale library reports for the "C" locale.  Bleah.)

2007-02-07  Derek Scherger  <derek@echologic.com>

	* work.cc (struct workspace_itemizer): return boolean from visit_dir
	(perform_content_update): get list of known paths for visit_dir to use
	* testsuite.lua: account for renamed test

2007-02-07  Derek Scherger  <derek@echologic.com>

	* NEWS: add notes about changes to ls unknown's behaviour

2007-02-07  Derek Scherger  <derek@echologic.com>

	* NEWS: add notes about changes to update's behaviour
	* tests/(imp)_deleting_directories/__driver__.lua:
	* tests/annotate_file_whose_name_changed/__driver__.lua:
	* tests/merge((),_(add_a,_drop_a,_add_a))/__driver__.lua:
	* tests/merge((),_(add_a,_patch_a,_drop_a,_add_a))/__driver__.lua:
	* tests/merging_a_rename_twice/__driver__.lua:
	* tests/merging_adds/__driver__.lua:
	* tests/renaming_a_deleted_file/__driver__.lua:
	* tests/repeatedly_exchanging_work_via_netsync/__driver__.lua:
	* tests/schema_migration/__driver__.lua:
	* tests/schema_migration_with_rosterify/__driver__.lua:
	* tests/test_a_merge_7/__driver__.lua:
	add a few "remove" calls so that tests no longer require update to
	clobber files
	* tests/drop_directory_with_unversioned_files_and_merge: rename to ...
	* tests/drop_directory_with_unversioned_files_and_update: ... this
	and un-xfail
	* tests/update_clobbers_workspace/__driver__.lua:
	* tests/update_does_not_stomp_non-monotone_files/__driver__.lua:
	adjust/un-xfail to account for update no longer clobbering
	unversioned files