@@ -704,3 +704,4 @@ table.insert(tests, "update_clobbers_workspace")
 table.insert(tests, "ls_unknown_in_subdir")
 table.insert(tests, "test_a_merge_8")
 table.insert(tests, "magic__MTN_in_restrictions")
+table.insert(tests, "db_kill_rev_and_recommit")
